# gbi-scios

./: .gitignore  SYSTEM_AUDIT_REPORT.md  requirements.txt
build-a-production-grade-fastapi-backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  gbi_scios.db  pyproject.toml  seed_boq.py  seed_mandatory.py  seed_mandatory_clear.py  seed_mandatory_from_excel.py
build-a-production-grade-fastapi-backend/alembic/: env.py
build-a-production-grade-fastapi-backend/alembic/versions/: 0001_create_users.py  0002_create_projects.py  0003_create_uploaded_files.py  0004_create_boq_items.py  0005_create_compliance_tables.py  0006_risk_ai_tables.py  0007_evaluation_tables.py  0008_compliance_waiver_audit.py  0009_audit_logs_and_payroll.py  0010_bid_pharma_columns.py  0011_mandatory_list_sector_penalty.py  94bcd8cc92ab_create_reports_table.py
build-a-production-grade-fastapi-backend/app/: main.py
build-a-production-grade-fastapi-backend/app/core/: config.py  database.py  dependencies.py  security.py
build-a-production-grade-fastapi-backend/app/models/: __init__.py  ai.py  audit.py  bid.py  boq_item.py  compliance.py  evaluation.py  mandatory_list.py  payroll.py  project.py  reporting.py  risk.py  supplier.py  uploaded_file.py  user.py
build-a-production-grade-fastapi-backend/app/routers/: ai.py  auth.py  compliance.py  dashboard.py  evaluations.py  parsing.py  payroll.py  projects.py  reporting.py  risk.py  uploads.py
build-a-production-grade-fastapi-backend/app/schemas/: ai.py  auth.py  bid.py  boq.py  compliance.py  dashboard.py  evaluation.py  (+7 more)
(+83 files in other folders)
