[project]
name = "gbi-scios-backend"
version = "0.1.0"
description = "Production-grade FastAPI backend for GBI-SCIOS"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "arabic-reshaper>=3.0.0",
    "rapidfuzz>=3.9.6",
    "python-bidi>=0.6.0",
    "reportlab>=4.2.2",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
